@@ -61,6 +61,11 @@ name
         <surname>Gustin</surname>
         <contrib>Chapter on &quot;Win32 Installation&quot;.</contrib>
       </author>
+      <author>
+        <firstname>Marko</firstname>
+        <surname>Anastasov</surname>
+        <contrib>Chapter on &quot;Printing&quot;.</contrib>
+      </author>
     </authorgroup>
 
     <abstract>
@@ -5238,6 +5243,372 @@ type.
 
 </sect1>
 
+
+</chapter>
+
+<chapter id="sec-printing">
+<title>Printing</title>
+
+<para>
+At the application development level, the native printing functionality
+provides dialogs that look the same as in other applications and shares
+a common drawing API with Cairo, with Pango-driven text rendering. Underneith,
+printer-specific drivers and platform-specific backends are used.
+</para>
+
+<sect1 id="sec-printoperation">
+<title>PrintOperation</title>
+
+<para>
+The primary object is <classname>Gtk::PrintOperation</classname>, allocated
+for each print operation. To handle page drawing, connect to its signals,
+or inherit from it and override the default virtual signal handlers.
+<classname>PrintOperation</classname> automatically handles all the settings
+affecting the print loop.
+</para>
+
+<sect2 id="sec-printoperation-signals">
+<title>Signals</title>
+
+<para>
+<function>PrintOperation::run()</function> method starts the print loop
+during which various signals are emitted:
+
+<itemizedlist>
+  <listitem>
+    <para>
+      <literal>begin_print</literal>:
+      It is necessary to handle this signal. This is where you
+      create and set up a <classname>Pango::Layout</classname> using the
+      provided <classname>Gtk::PrintContext</classname>, and break up your
+      printing material into pages.
+    </para>
+  </listitem>
+
+  <listitem>
+    <para>
+      <literal>paginate</literal>: Pagination is potentially slow, so if you
+      need to monitor it, you can call the
+      <function>PrintOperation::set_show_progress()</function> method and
+      handle this signal.
+    </para>
+  </listitem>
+
+  <listitem>
+    <para>
+      For each page that needs to be rendered, the following signals
+      are emitted:
+      <itemizedlist>
+        <listitem>
+	  <para>
+	    <literal>request_page_setup</literal>: Provides a
+	    <classname>PrintContext</classname>, page number and
+	    <classname>Gtk::PageSetup</classname>. Handle this signal if you
+	    need to modify page setup on a per-page basis.
+	  </para>
+	</listitem>
+
+	<listitem>
+	  <para>
+	    <literal>draw_page</literal>: The second signal which is
+	    necessary to handle. Provides a
+	    <classname>PrintContext</classname> and a page number.
+	    The <classname>PrintContext</classname> is used here
+	    to create a <classname>Cairo::Context</classname> over which
+	    the provided page is to be drawn. To render text, iterate over
+	    the <classname>Pango::Layout</classname> you created in the
+	    <literal>begin_print</literal> handler.
+	  </para>
+	</listitem>
+      </itemizedlist>
+    </para>
+  </listitem>
+
+  <listitem>
+    <para>
+      <literal>end_print</literal>: TODO it's much more useful in C
+      as a place to g_free()
+    </para>
+  </listitem>
+
+  <listitem>
+    <para>
+      <literal>done</literal>: Printing is considered to be done when the
+      print data is spooled. Note that the provided
+      <literal>Gtk::PrintOperationResult</literal> may also indicate that
+      an error occurred. In any case you probably want to notify the user
+      about the final status.
+    </para>
+  </listitem>
+
+  <listitem>
+    <para>
+      <literal>status_changed</literal>: Emitted whenever a print job's
+      status changes, until it's finished. Call
+      <function>PrintOperation::set_track_print_status()</function> method to
+      monitor the job status after spooling. To see the status, use
+      <function>get_status()</function> or
+      <function>get_status_string()</function>.
+    </para>
+  </listitem>
+</itemizedlist>
+
+</para>
+
+<para>
+<ulink url="&url_refdocs_base_gtk;PrintOperation.html">Reference</ulink>
+</para>
+
+</sect2>
+
+</sect1>
+
+<sect1 id="sec-page_setup">
+<title>Page setup</title>
+
+<para>
+<classname>PrintOperation</classname> has a method
+<function>set_default_page_setup()</function> which selects the default
+paper size, orientation and margins. To show a page setup dialog from your
+application, use the <function>Gtk::run_page_setup_dialog()</function> method,
+which returns a <classname>Gtk::PageSetup</classname> object with the chosen
+settings. Use this object to update a <classname>PrintOperation</classname>
+and to access the selected <classname>Gtk::PaperSize</classname>,
+<literal>Gtk::PageOrientation</literal> and printer-specific margins:
+</para>
+
+<programlisting>
+//Within a class that inherits from Gtk::Window and keeps m_refPageSetup and m_refSettings as members...
+Glib::RefPtr&lt;Gtk::PageSetup&gt; new_page_setup = Gtk::run_page_setup_dialog(*this, m_refPageSetup, m_refSettings);
+m_refPageSetup = new_page_setup;
+</programlisting>
+
+<para>
+The Cairo coordinate system, in the <literal>draw_page</literal> handler,
+is automatically rotated to the current page orientation. It is normally
+within the printer margins, but you can change that via
+<function>PrintOperation::set_use_full_page()</function>
+method. Default measurement unit is in device pixels. To select other units,
+use the <function>PrintOperation::set_unit()</function> method.
+</para>
+
+</sect1>
+
+<sect1 id="sec-printing_rendering_text">
+<title>Rendering text</title>
+
+<para>
+Text rendering is done using Pango.
+<classname>Pango::Layout</classname> for printing is created by calling
+the <function>PrintContext::create_pango_layout()</function> method.
+<classname>PrintContext</classname> also provides the page metrics,
+via <function>get_width()</function> and <function>get_height()</function>.
+The number of pages is set with
+<function>PrintOperation::set_n_pages()</function>. To actually render the
+set up Pango text in <literal>on_draw_page</literal>, get a
+<classname>Cairo::Context</classname> with
+<function>PrintContext::get_cairo_context()</function> and show the
+<classname>Pango::LayoutLine</classname>s that appear within the requested
+page number.
+</para>
+
+<para>
+See <link linkend="sec-printing_example-simple">an example</link>
+for how exactly this can be done.
+</para>
+
+</sect1>
+
+<sect1 id="sec-async_printing_ops">
+<title>Asynchronous operations</title>
+
+<para>
+By default, <function>PrintOperation::run()</function> returns when a print
+operation is completed. If you need to run a non-blocking print operation,
+call <function>PrintOperation::set_allow_async()</function>. Note that <function>set_allow_async()</function> is not supported
+on all platforms, however done will still be emitted.
+</para>
+
+<para>
+<function>run()</function> may return
+<literal>PRINT_OPERATION_RESULT_IN_PROGRESS</literal>. To track status
+and handle the result or error you need to implement signal handlers for
+the <literal>done</literal> and <literal>status_changed</literal> signals:
+
+<programlisting>
+// in class ExampleWindow's method...
+Glib::RefPtr&lt;PrintOperation&gt; op = PrintOperation::create();
+// ...set up op...
+op->signal_done().connect(sigc::bind(sigc::mem_fun(*this, &amp;ExampleWindow::on_printoperation_done), op));
+// run the op
+</programlisting>
+
+Second, check for error and connect to <literal>status_changed</literal>:
+
+<programlisting>
+void ExampleWindow::on_printoperation_done(Gtk::PrintOperationResult result, const Glib::RefPtr&lt;PrintOperation&gt;&amp; op)
+{
+  if (result == Gtk::PRINT_OPERATION_RESULT_ERROR)
+    //notify user
+  else if (result == Gtk::PRINT_OPERATION_RESULT_APPLY)
+    //Update PrintSettings with the ones used in this PrintOperation
+
+  if (! op->is_finished())
+  {
+    op->signal_status_changed().connect(sigc::bind(sigc::mem_fun(*this, &amp;ExampleWindow::on_printoperation_status_changed), op));
+  }
+}
+</programlisting>
+
+Finally, watch the status:
+
+<programlisting>
+void ExampleWindow::on_printoperation_status_changed(const Glib::RefPtr&lt;PrintFormOperation&gt;&amp; op)
+{
+  if (op->is_finished())
+    //the print job is finished
+  else
+    //get the status with get_status() or get_status_string()
+
+  //update UI
+}
+</programlisting>
+
+</para>
+
+</sect1>
+
+<sect1 id="sec-export_to_pdf">
+<title>Export to PDF</title>
+<para>
+'Print to file' option is available in the print dialog, invisible to the
+application. However, it is sometimes useful to generate a pdf file directly
+from code:
+
+<programlisting>
+Glib::RefPtr&lt;Gtk::PrintOperation&gt; op = Gtk::PrintOperation::create();
+// ...set up op...
+op->set_export_filename(&quot;test.pdf&quot;);
+Gtk::PrintOperationResult res = op-&gt;run(Gtk::PRINT_OPERATION_ACTION_EXPORT);
+</programlisting>
+
+</para>
+
+</sect1>
+
+<sect1 id="sec-extending_print_dialog">
+<title>Extending the print dialog</title>
+
+<para>
+It is possible to add a custom tab to the print dialog:
+
+<itemizedlist>
+  <listitem>
+    <para>
+      Set the title of the tab via
+      <function>PrintOperation::set_custom_tab_label()</function>,
+      create a new widget and return it from the
+      <literal>create_custom_widget</literal> signal handler. You'll probably
+      want this to be a container widget, packed with some others.
+    </para>
+  </listitem>
+
+  <listitem>
+    <para>
+      Get the data from the widgets in the
+      <literal>custom_widget_apply</literal> signal handler.
+    </para>
+  </listitem>
+</itemizedlist>
+</para>
+
+<para>
+Although <literal>custom_widget_apply</literal> returns you the widget you
+previously created, to simplify things you can keep the widgets you expect
+to contain some user input as class members. For example, let's say you have
+a <classname>Gtk::Entry</classname> called <literal>m_Entry</literal> as
+a member of <classname>CustomPrintOperation</classname> class:
+
+<programlisting>
+Gtk::Widget* CustomPrintOperation::on_create_custom_widget()
+{
+  set_custom_tab_label(&lt;My custom tab&gt;);
+
+  Gtk::HBox* hbox = new Gtk::HBox(false, 8);
+  hbox->set_border_width(6);
+
+  Gtk::Label* label = Gtk::manage(new Gtk::Label("Enter some text: "));
+  hbox->pack_start(*label, false, false);
+  label->show();
+
+  hbox->pack_start(m_Entry, false, false);
+  m_Entry.show();
+
+  return hbox;
+}
+
+void CustomPrintOperation::on_custom_widget_apply(Gtk::Widget* /* widget */)
+{
+  Glib::ustring user_input = m_Entry.get_text();
+  //...
+}
+</programlisting>
+
+</para>
+
+</sect1>
+
+<sect1 id="sec-printing_preview">
+<title>Preview</title>
+
+<para>
+The native GTK+ print dialog has a preview button. It is possible to start
+a preview directly from an application:
+
+<programlisting>
+// in a class that inherits from Gtk::Window...
+Glib::RefPtr&lt;PrintOperation&gt; op = PrintOperation::create();
+// ...set up op...
+op->run(PRINT_OPERATION_ACTION_PREVIEW, *this);
+</programlisting>
+</para>
+
+<para>
+On Unix, default preview handler uses an external viewer program. On Windows,
+native preview dialog will be invoked. If necessary it is possible to override
+this behaviour and provide a custom preview dialog. See &quot;advanced&quot;
+example for how to do this. TODO - create a link
+</para>
+
+</sect1>
+
+<sect1 id="sec-printing_example">
+<title>Example</title>
+
+<sect2 id="sec-printing_example-simple">
+<title>Simple</title>
+
+<para>
+The following example demonstrates how to print some input from a user
+interface. It shows how to implement <literal>on_begin_print</literal>
+and <literal>on_draw_page</literal>, as well as how to track print status
+and update the print settings.
+</para>
+
+<figure id="figure-printing-simple">
+  <title>Printing - Simple (TODO: make a screenshot)</title>
+  <screenshot>
+    <graphic format="PNG" fileref="&url_figures_base;printing_simple.png"/>
+  </screenshot>
+</figure>
+
+<para>
+<ulink url="&url_examples_base;printing/simple/">Source Code</ulink>
+</para>
+
+</sect2>
+
+</sect1>
 
 </chapter>
 
