@@ -1,3 +1,7 @@
+2006-07-12  Marko Anastasov <marko@marko.anastasov.name>
+
+	* docs/tutorial/gtkmm-tut.xml: Added a chapter about printing.
+
 2006-07-12  Murray Cumming  <murrayc@murrayc.com>
 
 	* docs/tutorial/gtkmm-tut.xml: Added an appendix about wrapping C libraries with 
